@@ -1,3 +1,8 @@
+2005-02-02  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network.pl.in: Only add an empty ppp0 interface if it wasn't added
+	before and pppd exists
+
 2005-01-31  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* users-conf.in: detect whether to use md5 or not from the pam setup.
